# DOUcrawler

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: scrape_daily.yml  test-discovery.yml
.specify/memory/: constitution.md  copilot.md
data/: busca-manual.jsonl  for-a-nacional.jsonl  funai.jsonl  funda-o-nacional-dos-povos-ind-genas.jsonl  ind-gena.jsonl  ind-genas.jsonl  monitoramento-ind-gena-geral.jsonl  nomea-es-na-for-a-nacional.jsonl
specs/001-dou-scrapper-mvp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-dou-scrapper-mvp/checklists/: requirements.md
specs/001-dou-scrapper-mvp/contracts/: interfaces.py
src/: __init__.py  app.py  config.py  debug_discovery.py  discovery_service.py  downloader.py  main.py  matcher.py  models.py  parser.py  scheduler.py  storage.py  test_filtering.py
tests/: test_config.py  test_downloader.py  test_main.py  test_matcher.py  test_matcher_rules.py  test_parser.py  test_sanity.py  test_scheduler.py  test_storage.py
